--- a/gb_ui/Base.lproj/Main.storyboard
+++ b/gb_ui/Base.lproj/Main.storyboard
@@ -198,19 +198,18 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z7I-pk-hR2" customClass="RoundedImage" customModule="gb_ui" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="48"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="TTO-ss-mZe"/>
+                                                        <constraint firstAttribute="width" secondItem="Z7I-pk-hR2" secondAttribute="height" id="VPG-Ux-tuU"/>
                                                         <constraint firstAttribute="width" constant="50" id="rmr-jt-08x"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
-                                                <constraint firstItem="Z7I-pk-hR2" firstAttribute="leading" secondItem="kUF-aY-zkf" secondAttribute="leading" id="3bx-hp-GKM"/>
-                                                <constraint firstAttribute="height" constant="50" id="X0I-W5-h73"/>
-                                                <constraint firstAttribute="bottom" secondItem="Z7I-pk-hR2" secondAttribute="bottom" id="bOL-Pe-jGl"/>
-                                                <constraint firstAttribute="width" constant="50" id="gUm-NH-rOw"/>
+                                                <constraint firstAttribute="height" secondItem="Z7I-pk-hR2" secondAttribute="height" id="9Bj-wu-Ejt"/>
+                                                <constraint firstItem="Z7I-pk-hR2" firstAttribute="centerX" secondItem="kUF-aY-zkf" secondAttribute="centerX" id="B8n-FB-29j"/>
+                                                <constraint firstItem="Z7I-pk-hR2" firstAttribute="top" secondItem="kUF-aY-zkf" secondAttribute="top" id="ecE-Vm-qVC"/>
+                                                <constraint firstAttribute="width" secondItem="Z7I-pk-hR2" secondAttribute="width" id="gJy-HJ-SSD"/>
                                                 <constraint firstItem="Z7I-pk-hR2" firstAttribute="centerY" secondItem="kUF-aY-zkf" secondAttribute="centerY" id="rap-l8-juc"/>
-                                                <constraint firstItem="Z7I-pk-hR2" firstAttribute="top" secondItem="kUF-aY-zkf" secondAttribute="top" id="z9J-Cm-ksd"/>
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="skS-X7-7BR">
@@ -295,7 +294,6 @@
                                 </collectionViewCellContentView>
                                 <connections>
                                     <outlet property="photoImage" destination="7fr-SR-GZb" id="Mzf-jl-wqG"/>
-                                    <segue destination="up4-0S-0Ku" kind="show" identifier="to_photoScene" id="MP0-Wd-cuu"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -305,6 +303,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="yNM-gu-Hzf"/>
+                    <connections>
+                        <segue destination="up4-0S-0Ku" kind="show" identifier="to_photoScene" id="NKR-H0-Vmp"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lSo-9y-J1G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -564,13 +565,13 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="AyG-gh-9af">
                                                     <rect key="frame" x="80" y="25.5" width="41.5" height="40.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ht7-7p-B4A">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ht7-7p-B4A">
                                                             <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIO-Oz-HmN">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIO-Oz-HmN">
                                                             <rect key="frame" x="0.0" y="23.5" width="41.5" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
@@ -591,6 +592,7 @@
                                             <outlet property="avatarImage" destination="Eka-FX-Zw9" id="X4Z-QT-yDj"/>
                                             <outlet property="cityLabel" destination="yIO-Oz-HmN" id="X33-WA-IBM"/>
                                             <outlet property="nameLabel" destination="ht7-7p-B4A" id="HFC-35-jyh"/>
+                                            <outlet property="shedow" destination="Vf5-jb-xGo" id="cx6-23-VeT"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -646,12 +648,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Df-11-N7e" customClass="Shedow" customModule="gb_ui" customModuleProvider="target">
-                                <rect key="frame" x="20" y="59" width="145" height="145"/>
+                                <rect key="frame" x="20" y="59" width="100" height="100"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo_template" translatesAutoresizingMaskIntoConstraints="NO" id="7JC-rF-njb" customClass="RoundedImage" customModule="gb_ui" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="145" height="145"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <gestureRecognizers/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="2An-Pz-I7a"/>
                                             <constraint firstAttribute="width" secondItem="7JC-rF-njb" secondAttribute="height" multiplier="1:1" id="uXd-F8-KcI"/>
                                         </constraints>
                                     </imageView>
@@ -674,7 +677,7 @@
                                 </connections>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECU-Ri-qJu">
-                                <rect key="frame" x="195" y="59" width="41.5" height="20.5"/>
+                                <rect key="frame" x="150" y="59" width="41.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -694,7 +697,6 @@
                             <constraint firstItem="ECU-Ri-qJu" firstAttribute="top" secondItem="3Df-11-N7e" secondAttribute="top" id="P6e-Qx-Dff"/>
                             <constraint firstItem="3Df-11-N7e" firstAttribute="leading" secondItem="ucR-ch-wyJ" secondAttribute="leading" constant="20" id="V27-jh-BOl"/>
                             <constraint firstItem="ECU-Ri-qJu" firstAttribute="leading" secondItem="3Df-11-N7e" secondAttribute="trailing" constant="30" id="Zha-RZ-IIp"/>
-                            <constraint firstItem="3Df-11-N7e" firstAttribute="width" secondItem="ucR-ch-wyJ" secondAttribute="width" multiplier="0.35" id="hcn-nD-cga"/>
                             <constraint firstItem="6Yj-SZ-KRB" firstAttribute="centerX" secondItem="bZR-Ii-ULZ" secondAttribute="centerX" id="oXk-2M-KKe"/>
                             <constraint firstItem="ucR-ch-wyJ" firstAttribute="bottom" secondItem="6Yj-SZ-KRB" secondAttribute="bottom" constant="30" id="wmp-hA-iW2"/>
                         </constraints>
@@ -705,11 +707,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LL8-pu-bfh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer numberOfTapsRequired="2" id="bVb-Dx-DRj">
-                    <connections>
-                        <action selector="didDoubleTapOnImage:" destination="aEa-Z0-45a" id="CFS-dt-kaT"/>
-                    </connections>
-                </tapGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="2" id="bVb-Dx-DRj"/>
             </objects>
             <point key="canvasLocation" x="653.62318840579712" y="533.70535714285711"/>
         </scene>
