--- a/Cells/NewsCell.xib
+++ b/Cells/NewsCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,31 +16,33 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="704"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2wf-O6-5M7" customClass="Shedow" customModule="gb_ui" customModuleProvider="target">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2wf-O6-5M7" customClass="RoundedImageWithShadow" customModule="gb_ui" customModuleProvider="target">
                         <rect key="frame" x="8" y="8" width="60" height="60"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VTo-nE-byX" customClass="RoundedImageWithShadow" customModule="gb_ui" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                            </imageView>
-                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="VTo-nE-byX" firstAttribute="width" secondItem="2wf-O6-5M7" secondAttribute="width" id="5H3-ty-uba"/>
-                            <constraint firstItem="VTo-nE-byX" firstAttribute="centerY" secondItem="2wf-O6-5M7" secondAttribute="centerY" id="6Sw-Lq-3QZ"/>
                             <constraint firstAttribute="height" constant="60" id="Irx-Zb-o9u"/>
-                            <constraint firstAttribute="width" constant="60" id="Obw-9t-KKk"/>
-                            <constraint firstItem="VTo-nE-byX" firstAttribute="height" secondItem="2wf-O6-5M7" secondAttribute="height" id="VFa-xa-Hkq"/>
-                            <constraint firstItem="VTo-nE-byX" firstAttribute="centerX" secondItem="2wf-O6-5M7" secondAttribute="centerX" id="yLm-U5-lay"/>
+                            <constraint firstAttribute="width" secondItem="2wf-O6-5M7" secondAttribute="height" multiplier="1:1" id="PP9-vx-GOc"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CgM-4B-CRW">
-                        <rect key="frame" x="84" y="27.5" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="juD-L6-QWp" userLabel="News Info">
+                        <rect key="frame" x="84" y="8" width="322" height="42"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CgM-4B-CRW">
+                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hzn-5k-Ro5">
+                                <rect key="frame" x="0.0" y="27.5" width="31" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1g-TA-fS3">
-                        <rect key="frame" x="8" y="76" width="398" height="218"/>
+                        <rect key="frame" x="8" y="76" width="398" height="226"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -53,29 +55,24 @@
                             <constraint firstAttribute="width" constant="60" id="d2P-Oe-5Kd"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zfy-8k-dqz">
-                        <rect key="frame" x="84" y="676" width="60" height="30"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <state key="normal" title="2">
-                            <color key="titleColor" systemColor="labelColor"/>
-                            <imageReference key="image" image="square.and.pencil" catalog="system" symbolScale="default"/>
-                        </state>
-                    </button>
-                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sai-hZ-rkr">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="awW-w8-Un5" userLabel="Comment Control" customClass="LikeControl" customModule="gb_ui" customModuleProvider="target">
+                        <rect key="frame" x="84" y="676" width="60" height="20"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="IOh-Nw-vOu"/>
+                            <constraint firstAttribute="height" constant="20" id="xQB-uC-Mpp"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l3D-RJ-IUH" userLabel="Share Control" customClass="LikeControl" customModule="gb_ui" customModuleProvider="target">
                         <rect key="frame" x="160" y="676" width="60" height="20"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <state key="normal" title="5" image="arrowshape.turn.up.right" catalog="system">
-                            <color key="titleColor" systemColor="labelColor"/>
-                        </state>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hx3-WQ-ABv">
-                        <rect key="frame" x="346" y="676" width="60" height="20"/>
-                        <state key="normal" title="123" image="eye" catalog="system">
-                            <color key="titleColor" systemColor="labelColor"/>
-                        </state>
-                    </button>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="Ls8-cS-aMi"/>
+                            <constraint firstAttribute="width" constant="60" id="dEC-me-hNe"/>
+                        </constraints>
+                    </view>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pRs-32-lj8">
-                        <rect key="frame" x="24" y="302" width="366" height="366"/>
+                        <rect key="frame" x="28" y="310" width="358" height="358"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="pRs-32-lj8" secondAttribute="height" multiplier="1:1" id="tL1-Bd-cxG"/>
@@ -87,54 +84,59 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ucs-mF-Ocj" userLabel="Viewed Control" customClass="LikeControl" customModule="gb_ui" customModuleProvider="target">
+                        <rect key="frame" x="346" y="676" width="60" height="20"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="81C-q8-ut2"/>
+                            <constraint firstAttribute="width" constant="60" id="Cbd-1b-T50"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="y1g-TA-fS3" firstAttribute="top" secondItem="2wf-O6-5M7" secondAttribute="bottom" constant="8" id="0zN-gF-TXa"/>
-                    <constraint firstAttribute="trailing" secondItem="hx3-WQ-ABv" secondAttribute="trailing" constant="8" id="4yd-1D-DCH"/>
-                    <constraint firstItem="Zfy-8k-dqz" firstAttribute="width" secondItem="zaD-cv-LVd" secondAttribute="width" id="5mv-DW-n3A"/>
-                    <constraint firstItem="Sai-hZ-rkr" firstAttribute="height" secondItem="zaD-cv-LVd" secondAttribute="height" id="7ni-HT-uTb"/>
-                    <constraint firstItem="CgM-4B-CRW" firstAttribute="centerY" secondItem="VTo-nE-byX" secondAttribute="centerY" id="9PV-0a-ufl"/>
-                    <constraint firstItem="Sai-hZ-rkr" firstAttribute="leading" secondItem="Zfy-8k-dqz" secondAttribute="trailing" constant="16" id="CgR-97-cOZ"/>
-                    <constraint firstItem="Sai-hZ-rkr" firstAttribute="width" secondItem="zaD-cv-LVd" secondAttribute="width" id="CzE-K4-gMm"/>
-                    <constraint firstItem="CgM-4B-CRW" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="trailing" constant="16" id="Czs-SB-8ab"/>
+                    <constraint firstItem="awW-w8-Un5" firstAttribute="centerY" secondItem="zaD-cv-LVd" secondAttribute="centerY" id="35b-rO-fuc"/>
+                    <constraint firstItem="l3D-RJ-IUH" firstAttribute="centerY" secondItem="zaD-cv-LVd" secondAttribute="centerY" id="4Br-X9-b91"/>
+                    <constraint firstItem="l3D-RJ-IUH" firstAttribute="leading" secondItem="awW-w8-Un5" secondAttribute="trailing" constant="16" id="AtK-bj-5g4"/>
                     <constraint firstItem="pRs-32-lj8" firstAttribute="leading" secondItem="h83-eS-g4C" secondAttribute="leadingMargin" constant="8" id="Dfc-tY-rxH"/>
-                    <constraint firstItem="hx3-WQ-ABv" firstAttribute="width" secondItem="zaD-cv-LVd" secondAttribute="width" id="HSr-Pv-kOB"/>
                     <constraint firstItem="2wf-O6-5M7" firstAttribute="leading" secondItem="h83-eS-g4C" secondAttribute="leading" constant="8" id="KRE-oW-pJr"/>
-                    <constraint firstItem="Zfy-8k-dqz" firstAttribute="leading" secondItem="zaD-cv-LVd" secondAttribute="trailing" constant="16" id="Kb0-MP-3oM"/>
                     <constraint firstItem="zaD-cv-LVd" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="leading" id="LRU-jf-213"/>
-                    <constraint firstItem="Zfy-8k-dqz" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="TOI-Rc-EHC"/>
+                    <constraint firstItem="Ucs-mF-Ocj" firstAttribute="centerY" secondItem="zaD-cv-LVd" secondAttribute="centerY" id="QgS-8a-hYj"/>
                     <constraint firstItem="y1g-TA-fS3" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="leading" id="YgV-eS-I7y"/>
-                    <constraint firstItem="hx3-WQ-ABv" firstAttribute="height" secondItem="zaD-cv-LVd" secondAttribute="height" id="bwj-IY-eiT"/>
+                    <constraint firstAttribute="trailing" secondItem="Ucs-mF-Ocj" secondAttribute="trailing" constant="8" id="Z5V-6S-jUG"/>
+                    <constraint firstAttribute="trailing" secondItem="juD-L6-QWp" secondAttribute="trailing" constant="8" id="aHe-bd-v0W"/>
+                    <constraint firstItem="juD-L6-QWp" firstAttribute="top" secondItem="2wf-O6-5M7" secondAttribute="top" id="aam-ff-Tbz"/>
                     <constraint firstItem="pRs-32-lj8" firstAttribute="top" secondItem="y1g-TA-fS3" secondAttribute="bottom" constant="8" id="dEa-c1-voD"/>
                     <constraint firstItem="2wf-O6-5M7" firstAttribute="top" secondItem="h83-eS-g4C" secondAttribute="top" constant="8" id="gdL-6U-6bI"/>
-                    <constraint firstItem="Zfy-8k-dqz" firstAttribute="height" secondItem="zaD-cv-LVd" secondAttribute="height" multiplier="1.5" id="k9W-GG-NNv"/>
+                    <constraint firstItem="Ucs-mF-Ocj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="l3D-RJ-IUH" secondAttribute="trailing" constant="8" id="h1F-V9-fLm"/>
+                    <constraint firstItem="juD-L6-QWp" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="trailing" constant="16" id="iou-4y-0hZ"/>
                     <constraint firstItem="zaD-cv-LVd" firstAttribute="top" secondItem="pRs-32-lj8" secondAttribute="bottom" constant="8" id="pCq-ba-Tc5"/>
-                    <constraint firstItem="hx3-WQ-ABv" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="qSN-iy-xJN"/>
-                    <constraint firstItem="Sai-hZ-rkr" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="qUk-ay-dnn"/>
+                    <constraint firstItem="awW-w8-Un5" firstAttribute="leading" secondItem="zaD-cv-LVd" secondAttribute="trailing" constant="16" id="rL7-oC-U8k"/>
                     <constraint firstAttribute="trailing" secondItem="y1g-TA-fS3" secondAttribute="trailing" constant="8" id="riE-d1-cag"/>
                     <constraint firstAttribute="trailingMargin" secondItem="pRs-32-lj8" secondAttribute="trailing" constant="8" id="uiz-OK-IBl"/>
                     <constraint firstAttribute="bottom" secondItem="zaD-cv-LVd" secondAttribute="bottom" constant="8" id="wC8-nW-XT4"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="authorAvatar" destination="VTo-nE-byX" id="3Yx-94-QWU"/>
+                <outlet property="authorAvatar" destination="2wf-O6-5M7" id="cKR-6t-aS9"/>
                 <outlet property="authorName" destination="CgM-4B-CRW" id="nrT-zx-vfz"/>
+                <outlet property="commentControl" destination="awW-w8-Un5" id="gYl-GL-40f"/>
                 <outlet property="likeControl" destination="zaD-cv-LVd" id="JNu-tO-ta2"/>
                 <outlet property="newsText" destination="y1g-TA-fS3" id="F6o-cD-AjP"/>
                 <outlet property="photoCollection" destination="pRs-32-lj8" id="dAU-jM-FA8"/>
+                <outlet property="shareControl" destination="l3D-RJ-IUH" id="zK2-ub-QRO"/>
+                <outlet property="timeLabel" destination="hzn-5k-Ro5" id="2Oa-Dy-b7k"/>
+                <outlet property="viewedControl" destination="Ucs-mF-Ocj" id="Hbh-ZX-jbf"/>
             </connections>
             <point key="canvasLocation" x="-311.59420289855075" y="128.57142857142856"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="arrowshape.turn.up.right" catalog="system" width="128" height="106"/>
-        <image name="eye" catalog="system" width="128" height="81"/>
-        <image name="square.and.pencil" catalog="system" width="128" height="115"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
