add AnimateTransition, AnimatedNavigationController

--- a/gb_ui/Base.lproj/Main.storyboard
+++ b/gb_ui/Base.lproj/Main.storyboard
@@ -393,7 +393,7 @@
         <!--Groups-->
         <scene sceneID="szf-h7-hip">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="r9v-Ni-0TG" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="r9v-Ni-0TG" customClass="AnimatedNavigationController" customModule="gb_ui" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Groups" image="person.3" catalog="system" id="ld5-F2-0Sh"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="92I-j3-AeT">
@@ -597,7 +597,7 @@
                                             <constraints>
                                                 <constraint firstItem="AyG-gh-9af" firstAttribute="leading" secondItem="cip-ji-ezE" secondAttribute="trailingMargin" constant="16" id="N6c-1t-0qP"/>
                                                 <constraint firstItem="cip-ji-ezE" firstAttribute="leading" secondItem="V2t-Oe-4B7" secondAttribute="leading" constant="8" id="cHo-7A-dtg"/>
-                                                <constraint firstItem="AyG-gh-9af" firstAttribute="centerY" secondItem="V2t-Oe-4B7" secondAttribute="centerY" id="d5y-qh-f3v"/>
+                                                <constraint firstItem="AyG-gh-9af" firstAttribute="centerY" secondItem="cip-ji-ezE" secondAttribute="centerY" id="d5y-qh-f3v"/>
                                                 <constraint firstAttribute="bottom" secondItem="cip-ji-ezE" secondAttribute="bottom" constant="8" id="pS5-Ul-dpk"/>
                                                 <constraint firstItem="cip-ji-ezE" firstAttribute="top" secondItem="V2t-Oe-4B7" secondAttribute="top" constant="8" id="u5I-Dx-EDy"/>
                                             </constraints>
@@ -668,6 +668,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avc-BS-Zaf">
+                                <rect key="frame" x="182" y="88.5" width="41.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECU-Ri-qJu">
+                                <rect key="frame" x="182" y="60" width="41.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LGu-u9-Pn8" customClass="RoundedImageWithShadow" customModule="gb_ui" customModuleProvider="target">
                                 <rect key="frame" x="16" y="60" width="150" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -676,12 +688,6 @@
                                     <constraint firstAttribute="height" constant="150" id="bnI-R6-dFG"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECU-Ri-qJu">
-                                <rect key="frame" x="182" y="60" width="41.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KL9-hQ-IfS">
                                 <rect key="frame" x="0.0" y="218" width="414" height="595"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -697,8 +703,11 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Yj-SZ-KRB">
-                                <rect key="frame" x="177" y="88.5" width="52" height="30"/>
+                                <rect key="frame" x="354" y="180" width="52" height="30"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="Xns-go-WYY"/>
+                                </constraints>
                                 <state key="normal" title="Log out">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -710,22 +719,28 @@
                         <viewLayoutGuide key="safeArea" id="ucR-ch-wyJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="avc-BS-Zaf" firstAttribute="leading" secondItem="ECU-Ri-qJu" secondAttribute="leading" id="DQB-0B-cF4"/>
                             <constraint firstItem="KL9-hQ-IfS" firstAttribute="leading" secondItem="ucR-ch-wyJ" secondAttribute="leading" id="EEH-kS-uUp"/>
                             <constraint firstItem="LGu-u9-Pn8" firstAttribute="leading" secondItem="bZR-Ii-ULZ" secondAttribute="leading" constant="16" id="HwC-Wb-lyA"/>
                             <constraint firstItem="KL9-hQ-IfS" firstAttribute="top" secondItem="LGu-u9-Pn8" secondAttribute="bottom" constant="8" id="NnU-aI-hlq"/>
                             <constraint firstItem="ECU-Ri-qJu" firstAttribute="top" secondItem="LGu-u9-Pn8" secondAttribute="top" id="QEd-ub-xAv"/>
                             <constraint firstItem="ECU-Ri-qJu" firstAttribute="leading" secondItem="LGu-u9-Pn8" secondAttribute="trailing" constant="16" id="Tfc-iI-Q0w"/>
-                            <constraint firstItem="6Yj-SZ-KRB" firstAttribute="top" secondItem="ECU-Ri-qJu" secondAttribute="bottom" constant="8" id="Vja-Qy-06M"/>
+                            <constraint firstItem="ucR-ch-wyJ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="avc-BS-Zaf" secondAttribute="trailing" constant="8" id="Tpd-C0-Vhu"/>
+                            <constraint firstItem="avc-BS-Zaf" firstAttribute="top" secondItem="ECU-Ri-qJu" secondAttribute="bottom" constant="8" id="WOd-kp-eLo"/>
                             <constraint firstItem="ucR-ch-wyJ" firstAttribute="bottom" secondItem="KL9-hQ-IfS" secondAttribute="bottom" id="fO2-vb-i2k"/>
                             <constraint firstItem="LGu-u9-Pn8" firstAttribute="top" secondItem="ucR-ch-wyJ" secondAttribute="top" constant="16" id="ggg-My-eyx"/>
                             <constraint firstItem="ucR-ch-wyJ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ECU-Ri-qJu" secondAttribute="trailing" constant="8" id="iWC-gM-S0m"/>
-                            <constraint firstItem="6Yj-SZ-KRB" firstAttribute="centerX" secondItem="ECU-Ri-qJu" secondAttribute="centerX" id="nlq-BV-Oej"/>
+                            <constraint firstItem="ucR-ch-wyJ" firstAttribute="trailing" secondItem="6Yj-SZ-KRB" secondAttribute="trailing" constant="8" id="p5M-wX-vhG"/>
                             <constraint firstItem="ucR-ch-wyJ" firstAttribute="trailing" secondItem="KL9-hQ-IfS" secondAttribute="trailing" id="qup-9d-ihw"/>
+                            <constraint firstItem="KL9-hQ-IfS" firstAttribute="top" secondItem="6Yj-SZ-KRB" secondAttribute="bottom" constant="8" id="tfA-iC-989"/>
+                            <constraint firstItem="6Yj-SZ-KRB" firstAttribute="leading" relation="lessThanOrEqual" secondItem="LGu-u9-Pn8" secondAttribute="trailing" priority="999" constant="188" id="wGn-1C-FcS"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="person.fill.viewfinder" catalog="system" id="Tbb-k3-LPK"/>
                     <connections>
                         <outlet property="avatar" destination="LGu-u9-Pn8" id="98A-oo-mOW"/>
+                        <outlet property="cityLabel" destination="avc-BS-Zaf" id="UUE-m2-nRX"/>
+                        <outlet property="logOutButton" destination="6Yj-SZ-KRB" id="yWK-Sw-0NZ"/>
                         <outlet property="newsTableView" destination="KL9-hQ-IfS" id="cAn-Vx-Tcl"/>
                         <outlet property="usernameLabel" destination="ECU-Ri-qJu" id="1rS-mG-j6U"/>
                     </connections>
@@ -738,7 +753,7 @@
         <!--Friends-->
         <scene sceneID="WIN-iY-nOg">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hdI-uB-VGn" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hdI-uB-VGn" customClass="AnimatedNavigationController" customModule="gb_ui" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Friends" image="person" catalog="system" id="7td-af-3ZC"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xk2-PJ-crR">
